// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

// 常量定义
enum Constant {
	Constant_NULL = 0;
	Message_MaxBody_Len = 10240;// 最大的消息体长度
	Message_Head_Len = 10;	// 消息头的长度
}

enum ErrorCode {
	CS_OK = 0;
	CS_UNKNOW = 1;
	CS_SERVER_ERROR = 2;
	CS_INVALID_PARAMETER = 3;
	CS_INVALID_ACCOUNT = 4;
	CS_INVALID_PASSWORD = 5;
	CS_INVALID_PLAYERSTATE = 6;
	CS_INVALID_SESSION = 7;
	CS_INVALID_PLAYERID = 8;
	CS_INVALID_ATTACHCODE = 9;
	CS_ACCOUNT_EXIST = 10;
	CS_HERO_EXIST = 11;		// 购买英雄时
	CS_EQUIP_EXIST = 12;	// 购买装备时
	CS_NOT_ENOUGH_MONEY = 13;
}

message MessageHead {
	fixed32 message_id = 1;	// 消息ID
	sfixed32 body_len = 2;	// 消息体长度
}

message ErrorInfo {
	int32 code = 1;
	string context = 2;
}

message MessageSpan {
  sfixed64 send = 1;
  sfixed64 recv = 2;
}

// 空请求
message VoidRequest {
}

// 空响应
message VoidReply {
}

// 对时请求
message PingRequest {
  MessageSpan client = 1;
}

// 对时响应
message PingReply {
  MessageSpan client_span = 1;
  MessageSpan server_span = 2;
  sfixed64 server_cur_time = 3;
}

// 服务器信息
message ServerInfo {
	sfixed64 timestamp = 1;
}

message SessionInfo {
  fixed64 player_id = 1;	// 玩家ID
  string session_id = 2;	// 会话ID
}

// 游戏服务器信息
message GameServerInfo {
	string node_id = 1;
	string node_name = 2;
	uint32 node_port = 3;
	int32 total_player = 4;
}

// 游戏服务器列表
message GameServerList {
	repeated GameServerInfo servers = 1;
}

// 公共服务
service Utility {
  rpc Ping (PingRequest) returns (PingReply) {}
}
